--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-github-btn": "^1.4.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "papaparse": "^5.3.0",
+    "openai": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.1.0",
